Update verbalization for model and log comparison